src/test/resources/examples/failing/ieee-computer-05.t
https://doi.ieeecomputersociety.org/10.1109/LICS.2010.50

Unicode in title
@inproceedings{GoubaultLarrecq:2010:omega-qrb-domains:10.1109/LICS.2010.50,
  author = {Goubault-Larrecq, Jean},
  title = {\ensuremath{\omega}-{QRB}-Domains and the Probabilistic Powerdomain},
  booktitle = {2010 25th Annual IEEE Symposium on Logic in Computer Science},
  series = {Logic in Computer Science, Symposium on},
  pages = {352--361},
  month = jul,
  year = {2010},
  publisher = {IEEE Computer Society},
  address = {Los Alamitos, CA, USA},
  isbn = {978-0-7695-4114-3},
  issn = {1043-6871},
  doi = {10.1109/LICS.2010.50},
  bib_scrape_url = {https://doi.ieeecomputersociety.org/10.1109/LICS.2010.50},
  keywords = {Quasi-continuous domains; probabilistic powerdomain},
  abstract = {Is there any cartesian-closed category of continuous domains that would be closed under Jones and Plotkin's probabilistic powerdomain construction? This is a major open problem in the area of denotational semantics of probabilistic higher-order languages. We relax the question, and look for quasi-continuous dcpos instead. These retain many nice properties from continuous dcpos. We introduce a natural class of such quasi-continuous dcpos, the \ensuremath{\omega}QRB-domains. We show that they form a category \ensuremath{\omega}QRB with pleasing properties: \ensuremath{\omega}QRB is closed under the probabilistic powerdomain functor, has all finite products, all bilimits, and is stable under retracts, and even under so-called quasi-retracts. But... \ensuremath{\omega}QRB is not cartesian closed.},
}
